<resources>
    <string name="app_name">ghoozh</string>
    <string name="phone_number">شماره ی خود را وارد کنید</string>
    <string name="user_name">نام کاربری خود را انتخاب کنید</string>
    <string name="repasword">کلمه ی عبور خود را مجددا وارد کنید</string>
    <string name="pasword">کلمه ی عبور خود را وارد کنید</string>
    <string name="Register">ثبت نام</string>
    <string name="ghavanin">مشاهده قوانین</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="forgotpassword">کد چهار رقمی پس از وارد کردن شماره تلفن همراه و تایید به شماره شما ارسال میگردد</string>


    =======
    <!--LoginActivity-->
    <string name="wrong_phone_number">شماره خود را صحیح وارد نمایید</string>
    <string name="wrong_user_name">نام کاربری خود را صحیح وارد نمایید</string>
    <string name="wrong_password">پسوورد خود راصحیح وارد نماید</string>
    <string name="wrong_re_password">پسوورد با تکرار پسوورد با هم یکی نیستند</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
