<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui"
    android:orientation="vertical"
    tools:context=".Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/signup_botton_back"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/padding_left"
            android:background="@drawable/arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/RegisterActivity_CircleImageView_Photo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/profile"
            app:civ_border_color="@color/bottom_white"
            app:civ_border_width="2dp" />



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/RegisterActivity_EditText_PhoneNumber"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/bottom_white"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:textColor="@color/bottom_white"
                android:textColorHint="@color/bottom_white"
                android:textSize="13dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/RegisterActivity_EditText_PhoneNumber"
                android:background="@drawable/icon" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp">

            <EditText
                android:id="@+id/RegisterActivity_EditText_UserName"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/bottom_white"
                android:hint="@string/user_name"
                android:inputType="text"
                android:textColor="@color/bottom_white"
                android:textColorHint="@color/bottom_white"
                android:textSize="13dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/RegisterActivity_EditText_UserName"
                android:background="@drawable/user" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp">

            <EditText
                android:id="@+id/RegisterActivity_EditText_Password"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/bottom_white"
                android:gravity="left"
                android:hint="@string/pasword"
                android:inputType="textPassword"
                android:textColor="@color/bottom_white"
                android:textColorHint="@color/bottom_white"
                android:textSize="13dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/RegisterActivity_EditText_Password"
                android:background="@drawable/keyboard" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="190dp">

            <EditText
                android:id="@+id/RegisterActivity_EditText_PasswordAgain"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/bottom_white"
                android:gravity="right"
                android:hint="@string/repasword"
                android:inputType="textPassword"
                android:textColor="@color/bottom_white"
                android:textColorHint="@color/bottom_white"
                android:textSize="13dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/RegisterActivity_EditText_PasswordAgain"
                android:background="@drawable/keyboard" />
        </RelativeLayout>

        <Button
            android:id="@+id/RegisterActivity_Button_SignUp"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="70dp"
            android:background="@drawable/shap_background"
            android:text="@string/Register"
            android:textColor="@color/ui"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/RegisterActivity_TextView_Rules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="@string/ghavanin"
            android:textColor="@color/bottom_white" />
    </RelativeLayout>
</LinearLayout>